<resources>
    <string name="app_name">Guessing Game</string>
    <string name="hello_blank_fragment">QuestionsFragment</string>
    <string name="guess_hint">Guess a letter</string>
    <string name="button_text">Guess!</string>
    <string name="lives_left">You have %s lives left.</string>
    <string name="incorrect_guesses">"Incorrect guesses: %s"</string>
    <string name="start_new_game">Start new game</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="the_word_was">" The word was %1$s"</string>
    <string name="finish_game_button">Finish game</string>
    <string name="menu_game">game</string>
    <string name="menu_questions">questions</string>
    <string name="hint_question">question</string>
    <string name="hint_answer">answer</string>
    <string name="button_save_question">Save question</string>
    <string name="the_minimum_length_of_the_question_is_characters">The minimum length of the question is %d characters</string>
    <string name="the_minimum_answer_length_is_characters">The minimum answer length is %d characters</string>
    <string name="the_minimum_answer_length_is_characters_and_for_the_question">The minimum answer length is %1$d characters and %2$d for the question</string>
    <string name="question_active">Active?</string>
    <string name="switch_show">show</string>
    <string name="button_apply">apply</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="edit_question">Edit the question</string>
    <string name="save">Save</string>
    <string name="delete">delete question</string>
</resources>