<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    <variable
        name="gameViewModel"
        type="ru.openunity.guessinggame.GameViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".GameFragment">

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.1"
            android:textSize="36sp"
            android:text="@{gameViewModel.secretWordDisplay}"/>

        <TextView
            android:id="@+id/lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"/>

        <TextView
            android:id="@+id/incorrect_guesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}"/>

        <EditText
            android:id="@+id/guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="nothing"
            android:hint="@string/guess_hint"
            android:inputType="text"
            android:maxLength="1"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <Button
            android:id="@+id/guess_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />

        <Button
            android:id="@+id/finish_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_game_button"
            android:onClick="@{() -> gameViewModel.finishGame()}"/>
    </LinearLayout>
</layout>