<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".QFragment">

    <data>

        <variable
            name="viewModel"
            type="ru.openunity.guessinggame.QuestionViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">

                    <EditText
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:hint="@string/hint_question"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:padding="16dp"
                        android:text="@={viewModel.questionText}"
                        android:textColorHint="#546E7A" />

                    <EditText
                        android:id="@+id/word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:hint="@string/hint_answer"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:padding="16dp"
                        android:text="@={viewModel.answer}"
                        android:textColorHint="#546E7A" />

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{() -> viewModel.addQuestion()}"
                        android:text="@string/button_save_question" />
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questions_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:spanCount="2" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>